# Backend-Python-Processo-Seletivo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
auth/: auth.py
config/: db.py  logger.py
migrations/: env.py
migrations/versions/: 6e32cbd452a6_inital_migration.py
models/entities/: locations.py  reservations.py  rooms.py
models/schemas/: locations.py  reservations.py  rooms.py
routes/: locations.py  reservations.py  rooms.py
services/: reservation.py
tests/: test_api.py  test_db.py
