[project]
name = "backend-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi==0.136.1",
    "pydantic==2.13.4",
    "pyjwt==2.12.1",
    "sqlalchemy==2.0.39",
    "uvicorn>=0.46.0",
]
